# predictive-maintenance

./: .env.example  .gitignore  Dockerfile  README.md  Vehicle_Sensor_TestSet.xlsx  app_owner.py  app_technician.py  dashboard-1780410068175.json  database.py  docker-compose.yml  llm_chain.py  monitoring.py  nginx.conf  prometheus.yml  pyproject.toml  rag_pipeline.py  requirements.txt  start.sh  stress_test.py
.github/workflows/: ci.yml
apps/: owner.py  technician.py
data/: Vehicle_Sensor_Dataset.xlsx
docs/: sop_track1_technician_fault_diagnosis.md  sop_track2_owner_risk_alert.md
ml/: evaluate_llm.py  evaluate_predictions.py  train.py
src/: __init__.py  dashboard.py  eval_runner.py  logger.py  main.py  safety.py
src/predictivecare/: api.py  config.py  dashboard.py  database.py  features.py  llm.py  monitoring.py  rag.py  safety.py
tests/: test_config.py  test_features.py  test_safety.py
