[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "predictivecare"
version = "1.0.0"
description = "AI-powered vehicle predictive maintenance: dual-track ML with RAG-grounded LLM briefs and owner alerts."
requires-python = ">=3.11"
dynamic = ["dependencies"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
